// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the VideoPlayer component should render a loading state 1`] = `
<View
  style={
    Object {
      "position": "relative",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "aspectRatio": 1,
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "resizeMode": "cover",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`the VideoPlayer component should render just a thumbnail 1`] = `
<View
  style={
    Object {
      "position": "relative",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "uri": "https://picsum.photos/600/400/",
              "url": "https://picsum.photos/600/400/",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "resizeMode": "cover",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`the VideoPlayer component should render with a video 1`] = `
<View
  style={
    Object {
      "position": "relative",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "uri": "https://picsum.photos/600/400/",
              "url": "https://picsum.photos/600/400/",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "opacity": 0,
            "resizeMode": "cover",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 2,
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight="50"
      bbWidth="50"
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
          false,
          Object {
            "flex": 0,
            "height": 50,
            "width": 50,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
    >
      <RNSVGPath
        d="M7.63 3.34v17.5c-.04-.12-.17-.25-.35-.33-.18-.06-.37-.1-.5-.04l.14-.1 11.13-8.4c.22-.17.22-.2 0-.36L7 3.65l-.14-.1c.1.03.28.02.45-.07.2-.1.3-.2.36-.3v.13zM6 3.34c0-1.3.88-1.73 1.97-.95l11.05 7.9c1.1.8 1.1 2.06.04 2.86l-11.13 8.4C6.86 22.4 6 22 6 20.7V3.34z"
        fill={
          Array [
            0,
            0.9725490196078431,
            0.9686274509803922,
            0.9568627450980393,
            1,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth="1"
        x={0}
        y={0}
      />
    </RNSVGSvgView>
  </View>
  <Video
    ignoreSilentSwitch="ignore"
    onAudioBecomingNoisy={[Function]}
    onEnd={[Function]}
    onError={[Function]}
    onFullscreenPlayerDidDismiss={[Function]}
    onFullscreenPlayerDidPresent={[Function]}
    paused={true}
    playInBackground={true}
    playWhenInactive={true}
    source={
      Object {
        "uri": "http://embed.wistia.com/deliveries/f14c95b710c203f49551373bd37e9685694d6b5b.bin",
      }
    }
  />
</View>
`;
